# MCP_Agent

./: README.md
agent_zapier_mcp/: requirements.txt
agent_zapier_mcp/agents_dir/: base_agent.py
email/: send_email.py  token.json
gmail_mcp/: .gitignore  agent_with_mcp.py  mcp_agent.config.yaml
weather/: .gitignore  config_file.txt  pyproject.toml  weather.py
zapier_agent_mcp/agents_dir/: base_agent.py  new_agent.py
