[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
]

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "mcp>=1.5.0",
]
